<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.picaloopand.picaloop" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_signoff"
        android:title="@string/action_signoff"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="never"/>
</menu>
