<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.picaloopand.picaloop.BarFragment" >
    
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/baricon"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/Auto_Complete_Where_Text" >

        <requestFocus />
    </AutoCompleteTextView>

    <ImageView
        android:id="@+id/baricon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_local_bar_black_48dp"
        android:contentDescription="@string/bar_icon" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/User_Comment"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/bar_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_centerVertical="true"
        android:src="@drawable/bar" 
        android:contentDescription="@string/bar_image"/>

    <TextView
        android:id="@+id/barTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bar_image"
        android:layout_below="@+id/bar_image"
        android:text="@string/barTextView" 
        android:clickable="true"/>

</RelativeLayout>
